--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -67,6 +67,7 @@ jobs:
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_d7aa2869-594f-4b47-87e5-425e06886223 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_f958e84a-92b8-439f-a62d-4f45996b6d07 }}
+          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_a57b2858-cbdb-42f9-afe2-13acd06c5ccd }}
 
       - name: 'Deploy to Azure Web App'
